[gd_scene load_steps=31 format=2]

[ext_resource path="res://Assets/Sprites/columns/topo1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/block.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/columns/base1.png" type="Texture" id=3]
[ext_resource path="res://Sounds/drop.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/destruction.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sprites/columns/centro1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/columns/base2_.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/columns/centro2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/columns/topo2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/columns/base3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/columns/topo3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/columns/centro3.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "centro2",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "centro1",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "centro3",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "base1",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "base3",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "topo3",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "topo1",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "topo2",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "base2",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 80, 100 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 118.594, 20.5555 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 95, 42 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 61, 76 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 75, 18 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 68, 11 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 120, 45 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 83, 68 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 94, 8 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 99, 27 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 77, 89 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 60, 78 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 84, 84 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 78, 86 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 83, 112 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 136, 42 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 78, 112 )

[node name="block" type="RigidBody2D" groups=[
"columns",
]]
collision_layer = 2147483649
mass = 10.2041
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 10
contact_monitor = true
can_sleep = false
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.19209e-07, -3.69549e-06 )
scale = Vector2( 0.969697, 0.972973 )
z_index = 15
frames = SubResource( 1 )
animation = "topo3"

[node name="topo31" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1 )
z_index = 10
shape = SubResource( 2 )
disabled = true

[node name="topo32" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2, -80 )
scale = Vector2( 0.969697, 0.972973 )
z_index = 10
shape = SubResource( 3 )
disabled = true

[node name="topo33" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2, -15 )
z_index = 10
shape = SubResource( 4 )
disabled = true

[node name="base31" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2, -2 )
z_index = 10
shape = SubResource( 5 )
disabled = true

[node name="base32" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2, 58 )
z_index = 10
shape = SubResource( 6 )
disabled = true

[node name="base33" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 21 )
z_index = 10
shape = SubResource( 7 )
disabled = true

[node name="base11" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 61 )
z_index = 10
shape = SubResource( 8 )
disabled = true
one_way_collision_margin = 11.0

[node name="base12" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -37 )
z_index = 10
shape = SubResource( 9 )
disabled = true

[node name="base13" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -3 )
z_index = 10
shape = SubResource( 10 )
disabled = true

[node name="base22" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2, 78 )
z_index = 11
shape = SubResource( 11 )
disabled = true

[node name="base23" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1, -16 )
z_index = 10
shape = SubResource( 12 )
disabled = true

[node name="centro3" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1 )
shape = SubResource( 13 )

[node name="centro1" type="CollisionShape2D" parent="."]
visible = false
z_index = 10
shape = SubResource( 14 )
disabled = true
one_way_collision_margin = 62.5

[node name="centro2" type="CollisionShape2D" parent="."]
visible = false
z_index = 10
shape = SubResource( 15 )
disabled = true

[node name="topo11" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -3, 0 )
z_index = 10
shape = SubResource( 16 )
disabled = true

[node name="topo12" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, -10 )
z_index = 10
shape = SubResource( 17 )
disabled = true

[node name="topo21" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 4, 0 )
z_index = 11
shape = SubResource( 18 )
disabled = true

[node name="Tween" type="Tween" parent="."]

[node name="destruction" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="drop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_block_body_entered"]
[connection signal="input_event" from="." to="." method="_on_block_input_event"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
